<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/referee_add_team"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/individual_referee_add_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/edit_text_default" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/referee_add_points"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/individual_referee_add_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/edit_text_default"
        android:inputType="number"
        android:lines="1"
        android:maxLines="1"
        android:padding="10dp"
        android:text="@string/referee_add_default_points" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/individual_referee_add_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_default"
        android:text="@string/referee_add_save"
        android:textColor="#fff" />

</LinearLayout>