<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cz.sps_pi.sportovni_den.Fragment.RulesFragment">

    <TextView
        android:id="@+id/notifications_new_to"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/notifications_hint_addressee"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/notifications_new_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:background="@drawable/edit_text_default"
        android:hint="@string/notifications_hint_subject"
        android:inputType="textEmailSubject"
        android:maxLines="1"
        android:padding="10dp" />

    <EditText
        android:id="@+id/notifications_new_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="7dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_default"
        android:gravity="top|start"
        android:hint="@string/notifications_hint_body"
        android:inputType="textMultiLine|textCapSentences"
        android:padding="10dp"
        android:scrollHorizontally="false" />

    <Button
        android:id="@+id/notifications_new_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:background="@drawable/button_default"
        android:text="@string/notifications_send"
        android:textColor="#fff" />

</LinearLayout>
