<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/player"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/login_big_button"
            android:text="@string/login_i_am_player"
            android:textColor="@drawable/login_big_button_text"
            android:textSize="30sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="15dp">

        <Button
            android:id="@+id/referee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/login_big_button"
            android:text="@string/login_i_am_referee"
            android:textColor="@drawable/login_big_button_text"
            android:textSize="30sp" />

    </FrameLayout>

    <Button
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="skipLogin"
        android:text="@string/login_skip" />

</LinearLayout>